--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,30 @@
 body {
     font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
     background-color: #f4f4f4;
+    margin: 0;
+    padding: 20px;
 }
 
 header {
     background: #5cb85c;
-    color: white;
-    padding: 20px;
+    color: #fff;
+    padding: 10px 0;
     text-align: center;
 }
 
-h1, h2 {
+h1 {
     margin: 0;
 }
 
-section {
+h2 {
+    color: #333;
+}
+
+form {
+    background: #fff;
     padding: 20px;
-    margin: 10px;
-    border-radius: 5px;
-    background-color: white;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
 label {
@@ -29,12 +32,12 @@ label {
     margin: 10px 0 5px;
 }
 
-input, select, button {
+input, textarea, button {
     width: 100%;
     padding: 10px;
     margin-bottom: 10px;
     border: 1px solid #ccc;
-    border-radius: 5px;
+    border-radius: 4px;
 }
 
 button {
@@ -48,7 +51,23 @@ button:hover {
     background-color: #4cae4c;
 }
 
-#disponibilidade {
-    margin-top: 10px;
-    color: red;
+#consultasHoje, #consultasPorMes {
+    margin-top: 20px;
+    background: #fff;
+    padding: 10px;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.month {
+    margin: 10px 0;
+}
+
+.details {
+    display: none; /* Oculta os detalhes inicialmente */
+    margin-left: 20px;
+}
+
+.details div {
+    margin: 5px 0;
 }
