--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ label {
 }
 
 input, textarea, button {
-    width: 100%;
+    width: calc(100% - 22px); /* Ajuste para espaçamento */
     padding: 10px;
     margin-bottom: 10px;
     border: 1px solid #ccc;
@@ -70,4 +70,12 @@ button:hover {
 
 .details div {
     margin: 5px 0;
+}
+
+.consulta {
+    margin-bottom: 10px;
+    padding: 10px;
+    border: 1px solid #e0e0e0;
+    border-radius: 4px;
+    background-color: #f9f9f9;
 }
